; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_kpc.c_kpc_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_kpc.c_kpc_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sysctl_lckgrp_attr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"kpc\00", align 1
@sysctl_lckgrp = common dso_local global i32 0, align 4
@sysctl_lock = common dso_local global i32 0, align 4
@LCK_ATTR_NULL = common dso_local global i32 0, align 4
@kpc_initted = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kpc_init() #0 {
  %1 = call i32 (...) @lck_grp_attr_alloc_init()
  store i32 %1, i32* @sysctl_lckgrp_attr, align 4
  %2 = load i32, i32* @sysctl_lckgrp_attr, align 4
  %3 = call i32 @lck_grp_alloc_init(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %2)
  store i32 %3, i32* @sysctl_lckgrp, align 4
  %4 = load i32, i32* @sysctl_lckgrp, align 4
  %5 = load i32, i32* @LCK_ATTR_NULL, align 4
  %6 = call i32 @lck_mtx_init(i32* @sysctl_lock, i32 %4, i32 %5)
  %7 = call i32 (...) @kpc_arch_init()
  %8 = call i32 (...) @kpc_common_init()
  %9 = call i32 (...) @kpc_thread_init()
  store i32 1, i32* @kpc_initted, align 4
  ret void
}

declare dso_local i32 @lck_grp_attr_alloc_init(...) #1

declare dso_local i32 @lck_grp_alloc_init(i8*, i32) #1

declare dso_local i32 @lck_mtx_init(i32*, i32, i32) #1

declare dso_local i32 @kpc_arch_init(...) #1

declare dso_local i32 @kpc_common_init(...) #1

declare dso_local i32 @kpc_thread_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
